<resources>
    <string name="app_name">Lab8</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="country">Country</string>
    <string name="postalcode">Postal Code</string>
    <string name="phone">Phone No</string>
    <string name="url">URL</string>
</resources>
